style.css
/* ... */
article {
  display: flex;
  /* width: 10rem; */
  justify-content: space-around;
  gap: 0.5rem;
}

article .icon {
  cursor: default;
}

/* PROJECTS SECTION */

#projects {
  position: relative;
}

.color-container {
  border-color: rgb(163, 163, 163);
  background: rgb(250, 250, 250);
}

.project-img {
  border-radius: 2rem;
  width: 90%;
  height: 90%;
}

.project-title {
  margin: 1rem;
  color: black;
}

.project-btn {
  color: black;
  border-color: rgb(163, 163, 163);
}

/* CONTACT */

#contact {
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 70vh;
}

.contact-info-upper-container {
  display: flex;
  justify-content: center;
  border-radius: 2rem;
  border: rgb(53, 53, 53) 0.1rem solid;
  border-color: rgb(163, 163, 163);
  background: (250, 250, 250);
  margin: 2rem auto;
  padding: 0.5rem;
}

.contact-info-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  margin: 1rem;
}

.contact-info-container p {
  font-size: larger;
}

.contact-icon {
  cursor: default;
}

.email-icon {
  height: 2.5rem;
}

/* FOOTER SECTION */

footer {
  height: 26vh;
  margin: 0 1rem;
}

footer p {
  text-align: center;
}

.background1 {
  position: fixed;
  left: 5rem;
  top: 19rem;
  background-image: url("assets/shape-wawes.svg");
  background-size: cover;
  font-size: small;
  background-repeat: no-repeat;
  opacity: 0.2;
  z-index: -1;
  animation: wave 5s ease-out infinite;
}

@keyframes wave {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-20px);
  }
  100% {
    transform: translateY(0);
  }
}

.background2 {
  position: fixed;
  /* width: 100%;
  height: 100%; */
  right: 5rem;
  background-image: url("assets/shape-circle.svg");
  background-size: cover;
  background-repeat: no-repeat;
  opacity: 0.2;
  z-index: -1;
  transform: rotate(10deg);
  animation: wave 10s ease-in-out infinite;
}

.dark-graphics-backgrounds{
  filter: invert(100%);
}

.swiper-button::after {
  color: grey;
}




.ull {
  padding: 0;
  text-align: center;
  font-size: 0;
  width: 40px;
  position: absolute;
  left: 50%;
  top: 50%;
  -moz-transform: translateX(-50%) translateY(-30px);
  -ms-transform: translateX(-50%) translateY(-30px);
  -webkit-transform: translateX(-50%) translateY(-30px);
  transform: translateX(-50%) translateY(-30px);
}
.ull .lii {
  display: inline-block;
  width: 8px;
  height: 48px;
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  -webkit-transform: translateY(0);
  transform: translateY(0);
  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
  -moz-animation: colorbars 333ms alternate infinite cubic-bezier(0.5, 0.3, 0, 0.5);
  -webkit-animation: colorbars 333ms alternate infinite cubic-bezier(0.5, 0.3, 0, 0.5);
  animation: colorbars 333ms alternate infinite cubic-bezier(0.5, 0.3, 0, 0.5);
}

.one {
  background: #ee9802;
}

.two {
  background: #8fd100;
}

.three {
  background: #d61edd;
}

.four {
  background: #24dfd0;
}

.five {
  background: #ffcd00;
}

.lii:nth-of-type(1) {
  animation-delay: 111ms;
}

.lii:nth-of-type(2) {
  animation-delay: 222ms;
}

.lii:nth-of-type(3) {
  animation-delay: 333ms;
}

.lii:nth-of-type(4) {
  animation-delay: 444ms;
}

.lii:nth-of-type(5) {
  animation-delay: 555ms;
}

@keyframes colorbars {
  to {
    -moz-transform: translateY(12px);
    -ms-transform: translateY(12px);
    -webkit-transform: translateY(12px);
    transform: translateY(12px);
  }
}


/* Apply circular border to clickable icons */
.clickable-icon {
  border: solid 1px #000; 
  border-radius: 50%; /* Makes the element circular */
  width: 30px; /* Adjust the width and height as needed */
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Additional styling for light and dark mode icons if needed */
#light-mode .clickable-icon {
  background-color: #fff; /* Background color for the light mode icon */
  color: #000; /* Icon color for the light mode */
}

#dark-mode .clickable-icon {
  background-color: grey; /* Background color for the dark mode icon */
  color: #fff; /* Icon color for the dark mode */
}

.download-dark{
  color: white;
}

.swiper-slide{
  height: auto !important
  ;
}

.toggleSvg{
  margin-bottom: 10px;
}

/* The switch - the box around the slider */
#theme-toggle-button {
  font-size: 17px;
  position: relative;
  display: inline-block;
  width: 3.5rem;
  cursor: pointer;
}

/* Hide default HTML checkbox */
#toggle {
  opacity: 0;
  width: 0;
  height: 0;
}

#container,
#patches,
#stars,
#button,
#sun,
#moon,
#cloud {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  -webkit-transition-duration: 0.25s;
          transition-duration: 0.25s;
}

/* night sky background */
#toggle:checked + svg #container {
  fill: #2b4360;
}

/* move button to right when checked */
#toggle:checked + svg #button {
  -webkit-transform: translate(28px, 2.333px);
      -ms-transform: translate(28px, 2.333px);
          transform: translate(28px, 2.333px);
}

/* show/hide sun and moon based on checkbox state */
#sun {
  opacity: 1;
}

#toggle:checked + svg #sun {
  opacity: 0;
}

#moon {
  opacity: 0;
}

#toggle:checked + svg #moon {
  opacity: 1;
}

/* show or hide background items on checkbox state */
#cloud {
  opacity: 1;
}

#toggle:checked + svg #cloud {
  opacity: 0;
}

#stars {
  opacity: 0;
}

#toggle:checked + svg #stars {
  opacity: 1;
}




#load {
  position: absolute;
  width: 600px;
  height: 36px;
  left: 50%;
  top: 40%;
  margin-left: -300px;
  overflow: visible;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
}
/* ... */

